feat: :sparkles: Add keycloak binding, dashboards + refactor

--- a/admin-tools/get-credentials.yaml
+++ b/admin-tools/get-credentials.yaml
@@ -123,6 +123,7 @@
         - argocd
         - console
         - console-dso
+        - grafana
 
     - name: Set Keycloak DSO user facts
       ansible.builtin.set_fact:
@@ -134,6 +135,7 @@
         - argocd
         - console
         - console-dso
+        - grafana
 
     #    - name: Get Keycloak admin secret
     #      kubernetes.core.k8s_info:
@@ -243,21 +245,12 @@
         - console
         - console-dso
 
-    - name: Get Grafana credentials secret
-      kubernetes.core.k8s_info:
-        namespace: "{{ dsc.grafana.namespace }}"
-        kind: Secret
-        name: grafana-creds
-      register: grafana_creds
-      tags:
-        - grafana
-
     - name: Display Grafana URL and credentials
       ansible.builtin.debug:
         msg:
           - "URL: https://{{ dsc.grafana.subDomain }}{{ dsc.global.rootDomain }} "
-          - "Admin username: {{ grafana_creds.resources[0].data.GF_SECURITY_ADMIN_USER | b64decode }} "
-          - "Admin password: {{ grafana_creds.resources[0].data.GF_SECURITY_ADMIN_PASSWORD | b64decode }} "
+          - "Admin username: {{ keycloak_user }} "
+          - "Admin password: {{ keycloak_user_password }} "
       tags:
         - never
         - grafana
