--- a/roles/vault/tasks/post-install.yml
+++ b/roles/vault/tasks/post-install.yml
@@ -70,7 +70,7 @@
 
 - name: Set fact for vault secrets
   ansible.builtin.set_fact:
-    vault_token: "{{ vault_keys.resources[0].data.rootToken | b64decode }}"
+    vault_token: "{{ vault_keys.resources[0].data.root_token | b64decode }}"
 
 # Unseal vault node 1
 - name: Set seal count - node 1
