fix: :bug: Adapt join command for Vault node 3

--- a/roles/vault/tasks/post-install.yml
+++ b/roles/vault/tasks/post-install.yml
@@ -129,7 +129,8 @@
     container: vault
     pod: "{{ dsc_name }}-vault-2"
     namespace: "{{ dsc.vault.namespace }}"
-    command: vault operator raft join http://"{{ dsc_name }}-vault-0".vault-internal:8200
+    # command: vault operator raft join http://"{{ dsc_name }}-vault-0".vault-internal:8200
+    command: vault operator raft join -address="http://{{ dsc_name }}-vault-0.{{ dsc_name }}-vault-internal:8200"
   retries: 3
   delay: 20
   when: vault_status == 'not init'
