--- a/roles/grafana-dashboards/tasks/main.yaml
+++ b/roles/grafana-dashboards/tasks/main.yaml
@@ -1,12 +1,12 @@
 ---
 - name: Initialize grafana_label fact
   ansible.builtin.set_fact:
-    grafana_label: "{{ dsc.grafana.namespace }}-prod"
+    grafana_label: "{{ dsc_name }}-prod"
 
 - name: Set grafana_label
   when: dsc.global.environment != 'production'
   ansible.builtin.set_fact:
-    grafana_label: "{{ dsc.grafana.namespace }}-horsprod"
+    grafana_label: "{{ dsc_name }}-horsprod"
 
 - name: Get Grafana instance
   kubernetes.core.k8s_info:
