--- a/roles/grafana/tasks/main.yaml
+++ b/roles/grafana/tasks/main.yaml
@@ -16,12 +16,12 @@
 
 - name: Initialize grafana_name fact
   ansible.builtin.set_fact:
-    grafana_name: "{{ dsc.grafana.namespace }}-prod"
+    grafana_name: "{{ dsc_name }}-prod"
 
 - name: Set grafana_name
   when: dsc.global.environment != 'production'
   ansible.builtin.set_fact:
-    grafana_name: "{{ dsc.grafana.namespace }}-horsprod"
+    grafana_name: "{{ dsc_name }}-horsprod"
 
 - name: Deploy Grafana instance
   kubernetes.core.k8s:
