fix: :bug: Fix get-credentials for grafana part

--- a/admin-tools/get-credentials.yaml
+++ b/admin-tools/get-credentials.yaml
@@ -245,10 +245,25 @@
         - console
         - console-dso
 
+    - name: Initialize grafana_name fact
+      ansible.builtin.set_fact:
+        grafana_name: "{{ dsc_name }}-prod"
+      tags:
+        - never
+        - grafana
+
+    - name: Set grafana_name
+      when: dsc.global.environment != 'production'
+      ansible.builtin.set_fact:
+        grafana_name: "{{ dsc_name }}-horsprod"
+      tags:
+        - never
+        - grafana
+
     - name: Display Grafana URL and credentials
       ansible.builtin.debug:
         msg:
-          - "URL: https://{{ dsc.grafana.subDomain }}{{ dsc.global.rootDomain }} "
+          - "URL: https://{{ dsc.grafana.subDomain }}{{ dsc.global.rootDomain }}/{{ grafana_name }} "
           - "Admin username: {{ keycloak_user }} "
           - "Admin password: {{ keycloak_user_password }} "
       tags:
