fix: :bug: Fix get-credentials (grafana part)

--- a/uninstall.yaml
+++ b/uninstall.yaml
@@ -236,7 +236,8 @@
     - name: "Suppression gitlab-validating-webhook-configuration"
       kubernetes.core.k8s:
         state: absent
-        kind: ValidatingWebhookConfiguration
+        kind: 
+        
         name: gitlab-validating-webhook-configuration
       tags:
         - never
