--- a/uninstall.yaml
+++ b/uninstall.yaml
@@ -1,6 +1,17 @@
 - name: Désinstallation du socle DSO
   hosts: localhost
   gather_facts: false
+  vars:
+    grafana_dashboards:
+      - argo-cd
+      - gitlab-ci-pipeline
+      - gitlab-gitaly
+      - gitlab-runner
+      - harbor
+      - keycloak
+      - nexus
+      - sonarqube
+      - vault
 
   tasks:
 
@@ -278,6 +289,72 @@
         - console-dso
         - console
 
+    - name: "Suppression des dashboards Grafana"
+      kubernetes.core.k8s:
+        api_version: grafana.integreatly.org/v1beta1
+        state: absent
+        kind: GrafanaDashboard
+        namespace: "{{ dsc.grafana.namespace }}"
+        name: "{{ dsc_name }}-{{ item }}"
+      loop: "{{ grafana_dashboards }}"
+      tags:
+        - grafana-dashboards
+
+    - name: Initialisation du fact grafana_label
+      ansible.builtin.set_fact:
+        grafana_label: "{{ dsc_name }}-prod"
+      tags:
+        - grafana-datasource
+
+    - name: Paramétrage du fact grafana_label
+      when: dsc.global.environment != 'production'
+      ansible.builtin.set_fact:
+        grafana_label: "{{ dsc_name }}-horsprod"
+      tags:
+        - grafana-datasource
+
+    - name: "Suppression de la datasource Grafana prometheus par défaut"
+      kubernetes.core.k8s:
+        api_version: grafana.integreatly.org/v1beta1
+        state: absent
+        kind: GrafanaDatasource
+        namespace: "{{ dsc.grafana.namespace }}"
+        name: datasource-prom-{{ grafana_label }}
+      tags:
+        - grafana-datasource
+
+    - name: "Suppression du ClusterRoleBinding pour le service account Grafana"
+      kubernetes.core.k8s:
+        api_version: rbac.authorization.k8s.io/v1
+        state: absent
+        kind: ClusterRoleBinding
+        name: "{{ dsc.grafana.namespace }}-view"
+      tags:
+        - grafana
+
+    - name: Initialisation du fact grafana_name
+      ansible.builtin.set_fact:
+        grafana_name: "{{ dsc_name }}-prod"
+      tags:
+        - grafana
+
+    - name: Paramétrage du fact grafana_name
+      when: dsc.global.environment != 'production'
+      ansible.builtin.set_fact:
+        grafana_name: "{{ dsc_name }}-horsprod"
+      tags:
+        - grafana
+
+    - name: "Suppression de l'instance Grafana"
+      kubernetes.core.k8s:
+        api_version: grafana.integreatly.org/v1beta1
+        state: absent
+        kind: Grafana
+        name: "{{ grafana_name }}"
+        namespace: "{{ dsc.grafana.namespace }}"
+      tags:
+        - grafana
+
     - name: "Suppression de l'opérateur Grafana"
       kubernetes.core.helm:
         name: grafana-operator
@@ -296,30 +373,3 @@
       tags:
         - never
         - grafana-operator
-
-    - name: "Suppression de la datasource Grafana prometheus par défaut"
-      kubernetes.core.k8s:
-        api_version: grafana.integreatly.org/v1beta1
-        state: absent
-        kind: GrafanaDatasource
-        namespace: "{{ dsc.grafana.namespace }}"
-        name: prometheus
-      tags:
-        - grafana-datasource
-
-    - name: "Suppression du ClusterRoleBinding pour le service account Grafana"
-      kubernetes.core.k8s:
-        api_version: rbac.authorization.k8s.io/v1
-        state: absent
-        kind: ClusterRoleBinding
-        name: "{{ dsc.grafana.namespace }}-view"
-      tags:
-        - grafana
-
-    - name: "Suppression de l'instance Grafana"
-      kubernetes.core.k8s:
-        state: absent
-        kind: Namespace
-        name: "{{ dsc.grafana.namespace }}"
-      tags:
-        - grafana
